# flimdb

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.py
flimdb/: __init__.py  filelist.py  flimdb.py  movielib.py  torrentlib.py
flimdb/config/: config.toml
hooks/: pre-commit
